# transport-management

./: README.md  pyproject.toml  seed.py
app/: settings.py  urls.py
core/: models.py  querysets.py
core/management/commands/: seed_demo.py
driver/: choices.py  models.py  querysets.py
driver/api/: serializers.py  viewsets.py
driver/migrations/: 0001_initial.py
order/: choices.py  models.py  querysets.py
order/api/: serializers.py  viewsets.py
order/migrations/: 0001_initial.py
vehicle/: choices.py  models.py  querysets.py
vehicle/api/: serializers.py  viewsets.py
vehicle/migrations/: 0001_initial.py
